--- a/app/views/giphies/success.html.erb
+++ b/app/views/giphies/success.html.erb
@@ -1,3 +1,3 @@
-<iframe src="<%=@searched_gif.url%>">
-  <p>Hello</p>
-</iframe>
+<center><h3>Here's your random GIF</h3>
+	<iframe src="<%=@searched_gif.url%>"></iframe>
+<h3>Thank you for using my React-Rails App</h3></center>
