Add form to fail view/Organize HTML

--- a/app/views/giphies/none.html.erb
+++ b/app/views/giphies/none.html.erb
@@ -1,2 +1,9 @@
-<center>Sorry, there are no gifs for that! Please search again!
-</center>
+<div class="fail-container">
+	<h3>Sorry, there are no gifs for that! Please search again!</h3>
+	<div class="fail-form">
+	<form action="/giphies" method="get">
+  		<input type="text" name="gif">
+  		<input type="submit" value="Submit">
+	</form>
+	</div>
+</div>
