Add faceplam gif to none view/Refactor

--- a/app/views/giphies/success.html.erb
+++ b/app/views/giphies/success.html.erb
@@ -1,7 +1,7 @@
 <div class="success-container">
 	<h3>Here's your random GIF</h3>
 	<div class="framed-gif">
-		<iframe src="<%=@gif_result.url%>" height="<%=@gif_result.height%>" width="<%=@gif_result.width%>"></iframe>
+		<iframe src="<%=@searched_gif.url%>" height="<%=@searched_gif.height%>" width="<%=@searched_gif.width%>"></iframe>
 	</div>
 	<h3>Thank you for using my React-Rails App</h3>
 </div>
