--- a/app/views/giphies/none.html.erb
+++ b/app/views/giphies/none.html.erb
@@ -1,9 +1,12 @@
 <div class="fail-container">
 	<h3>Sorry, there are no gifs for that! Please search again!</h3>
+	<div class="framed-gif">
+		<iframe src="<%=@fail_gif.url%>" height="<%=@fail_gif.height%>" width="<%=@fail_gif.width%>"></iframe>
+	</div>
 	<div class="fail-form">
-	<form action="/giphies" method="get">
-  		<input type="text" name="gif">
-  		<input type="submit" value="Submit">
-	</form>
+		<form action="/giphies" method="get">
+  			<input type="text" name="gif">
+  			<input type="submit" value="Submit">
+		</form>
 	</div>
 </div>
