Add Bootstrap gem for styling/Add navbar to layout

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,17 @@
   </head>
 
   <body>
+    <nav class="navbar navbar-default">
+      <div class="container-fluid">
+        <div class="navbar-header">
+          <a class="navbar-brand" href="#">
+            <span class="app-title">
+              <h3>Giphies</h3>
+            </span>
+          </a>
+        </div>
+      </div>
+    </nav>
     <%= yield %>
   </body>
 </html>
