--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,10 +14,8 @@
     <nav class="navbar navbar-default">
       <div class="container-fluid">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#">
-            <span class="app-title">
-              <h3>Giphies</h3>
-            </span>
+          <a class="navbar-brand" href="/giphies">
+            <span class="app-title">Giphies</span>
           </a>
         </div>
       </div>
