--- a/app/views/giphies/none.html.erb
+++ b/app/views/giphies/none.html.erb
@@ -3,10 +3,10 @@
 	<div class="framed-gif">
 		<iframe src="<%=@fail_gif.url%>" height="<%=@fail_gif.height%>" width="<%=@fail_gif.width%>"></iframe>
 	</div>
-	<div class="fail-form">
+	<div class="form-inline">
 		<form action="/giphies" method="get">
   			<input type="text" name="gif">
-  			<input type="submit" value="Submit">
+  			<input class="btn btn-primary" type="submit" value="Submit">
 		</form>
 	</div>
 </div>
