--- a/app/views/giphies/success.html.erb
+++ b/app/views/giphies/success.html.erb
@@ -3,5 +3,5 @@
 	<div class="framed-gif">
 		<iframe src="<%=@searched_gif.url%>" height="<%=@searched_gif.height%>" width="<%=@searched_gif.width%>"></iframe>
 	</div>
-	<h3>Thank you for using my React-Rails App</h3>
+	<h3>Thank you for using Giphies!</h3>
 </div>
