Add jQuery method toggle to show url of gif.

--- a/app/views/giphies/success.html.erb
+++ b/app/views/giphies/success.html.erb
@@ -2,6 +2,7 @@
 	<h3>Here's your random GIF</h3>
 	<div class="framed-gif">
 		<iframe src="<%=@searched_gif.url%>" height="<%=@searched_gif.height%>" width="<%=@searched_gif.width%>"></iframe>
+		<div class="url"><%=@searched_gif.url%></div>
 	</div>
 	<h3>Thank you for using Giphies!</h3>
 </div>
