Hide url until mouseover/Add message telling user to hover over for url

--- a/app/assets/stylesheets/giphies.css
+++ b/app/assets/stylesheets/giphies.css
@@ -13,7 +13,12 @@
 .framed-gif {
 	text-align: center;
 	border: none;
-} 
+}
+
+.url {
+	display: none;
+	margin-top: 10px;
+}
 
 .app-title {
 	font-size: 150%;
