--- a/app/views/giphies/success.html.erb
+++ b/app/views/giphies/success.html.erb
@@ -1,5 +1,6 @@
 <div class="success-container">
-	<h3>Here's your random GIF</h3>
+	<h3>Here's your random GIF!</h3>
+	<h6>Hover over the gif for the url!</h6>
 	<div class="framed-gif">
 		<iframe src="<%=@searched_gif.url%>" height="<%=@searched_gif.height%>" width="<%=@searched_gif.width%>"></iframe>
 		<div class="url"><%=@searched_gif.url%></div>
