Include Font Awesome Sass Gem/Add refresh icon

--- a/app/views/giphies/success.html.erb
+++ b/app/views/giphies/success.html.erb
@@ -1,5 +1,5 @@
 <div class="success-container">
-	<h3>Here's your random GIF!</h3>
+	<h3>Here's your random GIF! <i class="fa fa-refresh" aria-hidden="true"></i></h3>
 	<h6>Hover over the gif for the url!</h6>
 	<div class="framed-gif">
 		<iframe src="<%=@searched_gif.url%>" height="<%=@searched_gif.height%>" width="<%=@searched_gif.width%>"></iframe>
