Make AJAX call to refresh framed-gif div

--- a/app/views/giphies/success.html.erb
+++ b/app/views/giphies/success.html.erb
@@ -1,7 +1,7 @@
 <div class="success-container">
 	<h3>Here's your random GIF! 
 		<div class="refresh-container">
-			<a class="refresh-icon"><i class="fa fa-refresh" aria-hidden="true"></i></a>
+			<a href="<%=@searched_gif.url%>" class="refresh-icon"><i class="fa fa-refresh" aria-hidden="true"></i></a>
 		</div>
 	</h3>
 	<h6>Hover over the gif for the url!</h6>
